--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "-": "^0.0.1",
     "@prisma/client": "^5.12.1",
     "@types/express": "^4.17.21",
+    "D": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
-    "D": "^1.0.0",
     "express": "^4.19.2",
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "prettyjson": "^1.2.5",
+    "qs": "^6.12.1",
     "reflect-metadata": "^0.2.2",
     "typescript": "^5.4.5"
   },
@@ -30,5 +33,10 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "prisma": "^5.12.1"
+  },
+  "_moduleAliases": {
+    "@": "./src",
+    "@db": "./src/db",
+    "@jwt": "./src/jwt"
   }
 }
