--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "-": "^0.0.1",
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.18.0",
     "@types/express": "^4.17.21",
     "D": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-winston": "^4.2.0",
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
     "jsonwebtoken": "^9.0.2",
@@ -26,13 +27,19 @@
     "prettyjson": "^1.2.5",
     "qs": "^6.12.1",
     "reflect-metadata": "^0.2.2",
-    "typescript": "^5.4.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/module-alias": "^2.0.4",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
-    "prisma": "^5.12.1"
+    "@types/prettyjson": "^0.0.33",
+    "prisma": "^5.18.0"
   },
   "_moduleAliases": {
     "@": "./src",
