--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "-": "^0.0.1",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "@types/express": "^4.17.21",
     "D": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
@@ -33,13 +37,16 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/apidoc": "^0.50.3",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/module-alias": "^2.0.4",
+    "@types/node": "^22.5.3",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/prettyjson": "^0.0.33",
-    "prisma": "^5.18.0"
+    "apidoc": "^1.2.0",
+    "prisma": "^5.19.1"
   },
   "_moduleAliases": {
     "@": "./src",
