--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2015",
     "typeRoots": ["node_modules/@types", "src/typings"],
-    "types": ["global.d.ts"],
+    "types": ["global.d.ts", "node"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "module": "CommonJS",
