--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prettyjson": "^1.2.5",
     "qs": "^6.12.1",
     "reflect-metadata": "^0.2.2",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "winston": "^3.14.2",
@@ -52,4 +54,3 @@
     "@jwt": "./src/jwt"
   }
 }
-
