--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@prisma/client": "^5.22.0",
     "@types/express": "^4.17.21",
-    "D": "^1.0.0",
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -26,6 +25,7 @@
     "inversify-express-utils": "^6.4.6",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "multer": "1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prettyjson": "^1.2.5",
