--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
-# DATABASE_URL="mysql://root:JIADAOMING0119jdm++@localhost:3306/mydatabase"
+# DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
+DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/mydatabase"
 
 BASE_URL="http://localhost:3000"
 # BASE_URL="http://106.54.28.152:3000"
