--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.0.1",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
@@ -24,6 +24,7 @@
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "multer": "1.4.5-lts.1",
     "passport": "^0.7.0",
@@ -46,7 +47,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/prettyjson": "^0.0.33",
-    "prisma": "^5.22.0"
+    "prisma": "^6.0.1"
   },
   "_moduleAliases": {
     "@": "./src",
