--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/mydatabase"
 
 # BASE_URL="http://localhost:3000"
 BASE_URL="http://106.54.28.152:3000"
+
+# 默认密码 123456..
+DEFAULT_PASSWORD="$2a$10$XhLYUx71gN8lnXBpD33k6Og15FE5ojbzTiK9KnqPupmRhfuAXCJMW"
