--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "express": "^4.19.2",
     "express-winston": "^4.2.0",
     "inversify": "^6.0.2",
