feat: ✨医生-患者信息，病例信息；患者-我的病例

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ BASE_URL="http://106.54.28.152:3000"
 
 # 默认密码 123456..
 DEFAULT_PASSWORD="$2a$10$XhLYUx71gN8lnXBpD33k6Og15FE5ojbzTiK9KnqPupmRhfuAXCJMW"
+
+ARK_API_KEY="3697ca16-1e7a-4a10-a52f-0bffd79d3a70"
+ZHIPUAI_API_KEY = "61cd79c61f5b4502a2b894360701de09.I1Flilm0DW26ccu2"
