--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "multer": "1.4.5-lts.1",
+    "openai": "^4.77.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prettyjson": "^1.2.5",
@@ -38,7 +39,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "winston": "^3.14.2",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "zhipuai-sdk-nodejs-v4": "^0.1.12"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
