--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
-DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/mydatabase"
+DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/templateDB"
 
 # BASE_URL="http://localhost:3000"
 BASE_URL="http://106.54.28.152:3000"
