--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.4.1",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "bcryptjs": "^2.4.3",
@@ -36,6 +36,8 @@
     "reflect-metadata": "^0.2.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "winston": "^3.14.2",
@@ -50,11 +52,21 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/prettyjson": "^0.0.33",
-    "prisma": "^6.0.1"
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
+    "prisma": "^6.4.1"
   },
   "_moduleAliases": {
     "@": "./src",
     "@db": "./src/db",
     "@jwt": "./src/jwt"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "@scarf/scarf",
+      "prisma"
+    ]
   }
 }
