feat(xiaocheng): 新增小诚模块及其相关功能
新增小诚模块，包括登录、项目、任务等接口，并添加相关类型定义和依赖配置。同时更新了工具类以支持新功能。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["autoincrement", "fieldname", "Jres"]
+  "cSpell.words": [
+    "alova",
+    "autoincrement",
+    "fieldname",
+    "Jres",
+    "xiao",
+    "xiaocheng"
+  ]
 }
