--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
-DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/templateDB"
+DATABASE_URL="mysql://root:123456@localhost:3306/xiaocheng"
+# DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/templateDB"
 
-# BASE_URL="http://localhost:3000"
-BASE_URL="http://106.54.28.152:3000"
+BASE_URL="http://localhost:3000"
+# BASE_URL="http://106.54.28.152:3000"
 
 # 默认密码 123456..
 DEFAULT_PASSWORD="$2a$10$XhLYUx71gN8lnXBpD33k6Og15FE5ojbzTiK9KnqPupmRhfuAXCJMW"
