feat(菜单): 添加无需登录的在线菜单功能
- 在菜单模型中新增need_login字段控制是否需要登录
- 添加获取在线菜单的API接口
- 更新初始化数据包含博客相关菜单
- 调整数据库连接配置和.gitignore文件
- 新增VS Code调试配置文件

--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
-DATABASE_URL="mysql://root:JIADAOMING0119jdm++@106.54.28.152:3306/templateDB"
+DATABASE_URL="mysql://root:JIADAOMING0119@117.72.60.94:3306/templateDB"
 
-# BASE_URL="http://localhost:3000"
-BASE_URL="http://106.54.28.152:3000"
+BASE_URL="http://localhost:3000"
+# BASE_URL="http://106.54.28.152:3000"
 
 # 默认密码 123456..
 DEFAULT_PASSWORD="$2a$10$XhLYUx71gN8lnXBpD33k6Og15FE5ojbzTiK9KnqPupmRhfuAXCJMW"
