feat(external): 添加外部数据库模块支持
添加外部数据库连接配置和查询功能，包括：
1. 在.env中添加EXTERNAL_DATABASE_URL配置
2. 新增外部数据库模块，包含控制器、服务和数据库连接
3. 实现高性能分页查询和缓存机制
4. 添加测试脚本和mysql2依赖
5. 优化主程序启动日志和健康检查端点

--- a/.env
+++ b/.env
@@ -7,6 +7,8 @@
 # DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
 DATABASE_URL="mysql://root:JIADAOMING0119@117.72.60.94:3306/templateDB"
 
+EXTERNAL_DATABASE_URL="mysql://root:JIADAOMING0119@117.72.60.94:3306/crawler"
+
 BASE_URL="http://localhost:3000"
 # BASE_URL="http://106.54.28.152:3000"
 
