--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon main.ts"
+    "dev": "nodemon main.ts",
+    "test:native-mysql": "ts-node test-native-mysql.ts"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
     "multer": "1.4.5-lts.1",
+    "mysql2": "^3.14.1",
     "openai": "^4.77.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
