refactor(prisma): 优化数据库连接配置和用户密码处理
- 重构PrismaClient配置为单例模式并添加omit配置
- 移除手动删除密码字段的逻辑，使用Prisma原生omit功能
- 添加数据库健康检查和优雅关闭功能
- 更新类型定义和全局配置
- 移除用户注册时的姓名必填验证

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2015",
-    "typeRoots": ["node_modules/@types", "src/typings"],
+    "typeRoots": ["node_modules/@types", "src/typings", "src/types"],
     "types": ["global.d.ts", "node"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -17,5 +17,5 @@
       "@jwt/*": ["jwt/*"]
     }
   },
-  "include": ["src/**/*", "src/typings/*.d.ts", "src/typings/global.d.ts"]
+  "include": ["src/**/*", "src/typings/*.d.ts", "src/typings/global.d.ts", "src/types/*.ts"]
 }
