feat(upload): 实现统一文件上传接口并增强OSS功能
新增统一文件上传接口，支持本地和OSS双目标上传，提供多种文件类型预设和自定义配置
完善OSS上传功能，增加端点配置和错误处理
添加Swagger文档和文件验证接口
重构上传服务模块，优化代码结构和可维护性
更新相关文档和环境配置示例

--- a/.env.oss.example
+++ b/.env.oss.example
@@ -13,3 +13,7 @@ OSS_ACCESS_KEY_SECRET="your-access-key-secret"
 
 # OSS存储桶名称
 OSS_BUCKET_NAME="your-bucket-name"
+
+# OSS访问端点（可选，如果不设置将自动根据region生成）
+# 格式：https://oss-cn-region.aliyuncs.com
+# OSS_ENDPOINT="https://oss-cn-hangzhou.aliyuncs.com"
