--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "ali-oss": "^6.20.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
