refactor(prisma): 重构数据库迁移文件并更新prisma版本至6.14.0
- 合并多个迁移文件为单一初始化迁移
- 更新prisma依赖版本
- 修改数据库连接配置
- 清理冗余依赖项

--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="mysql://root:123456@localhost:3306/mydatabase"
-DATABASE_URL="mysql://root:JIADAOMING0119@117.72.60.94:3306/templateDB"
+# DATABASE_URL="mysql://root:JIADAOMING0119@117.72.60.94:3306/templateDB"
+DATABASE_URL="mysql://root:JIADAOMING0119@117.72.60.94:3306/templateBlog"
 
 BASE_URL="http://localhost:3000"
 # BASE_URL="http://106.54.28.152:3000"
