--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon main.ts"
+    "dev": "nodemon main.ts",
+    "docs:generate": "ts-node config/generate-docs.ts",
+    "apifox:generate": "npm run docs:generate && echo \"📋 Apifox文档已生成: docs/openapi.json\""
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +30,7 @@
     "express-winston": "^4.2.0",
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
