refactor(文档): 重构API文档生成方式并移除Apifox相关文件
移除Apifox专用文档生成脚本和指南文件，改为直接在应用中提供动态API文档
增强Swagger文档配置，添加详细API模型定义和端点描述
简化package.json中的脚本命令

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon main.ts",
-    "docs:generate": "ts-node config/generate-docs.ts",
-    "apifox:generate": "npm run docs:generate && echo \"📋 Apifox文档已生成: docs/openapi.json\""
+    "dev": "nodemon main.ts"
   },
   "author": "",
   "license": "ISC",
