--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "ali-oss": "^6.20.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^17.0.1",
     "express": "^4.19.2",
-    "express-winston": "^4.2.0",
+    "iconv-lite": "^0.7.0",
     "inversify": "^6.0.2",
     "inversify-express-utils": "^6.4.6",
     "js-yaml": "^4.1.0",
@@ -45,13 +47,13 @@
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "winston": "^3.14.2",
-    "winston-daily-rotate-file": "^5.0.0",
     "zhipuai-sdk-nodejs-v4": "^0.1.12"
   },
   "devDependencies": {
     "@types/ali-oss": "^6.16.11",
+    "@types/cheerio": "^0.22.35",
     "@types/cors": "^2.8.17",
+    "@types/iconv-lite": "^0.0.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^22.5.3",
